--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
+    "seed-start": "node scripts/seed-and-start.js",
+    "seed": "node scripts/seedDatabase.js",
+    "seed-db": "node scripts/seed-sqlite.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "generate-migration": "node scripts/generate-migration.js",
+    "auto-migrate": "node scripts/auto-generate-migrations.js",
+    "db:migrate": "echo 'Migrations run automatically on app start'",
+    "db:status": "node scripts/view-migration-log.js",
+    "migration-log": "node scripts/view-migration-log.js",
+    "reset-migrations": "node scripts/reset-migrations.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
@@ -17,6 +26,7 @@
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.17",
     "expo-linear-gradient": "^14.1.5",
+    "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
