--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.17",
+    "expo-clipboard": "^6.0.3",
     "expo-linear-gradient": "^14.1.5",
+    "expo-linking": "^6.3.1",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
