--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "expo": "~53.0.17",
     "expo-clipboard": "^6.0.3",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "^6.3.1",
+    "expo-mail-composer": "^14.1.5",
     "expo-status-bar": "~2.2.3",
+    "express": "^5.1.0",
+    "openai": "^5.12.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -29,7 +35,9 @@
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
