--- a/.env
+++ b/.env
@@ -6,3 +6,13 @@ EXPO_PUBLIC_USE_REAL_AI=true
 
 # API Configuration
 EXPO_PUBLIC_API_BASE_URL=http://localhost:3000
+API_PORT=3000
+
+# Database Configuration
+#DB_SERVER=localhost
+#DB_PORT=60595
+DB_SERVER=127.0.0.1
+DB_PORT=1433
+DB_DATABASE=mentor_mentee_preprod
+DB_USER=test_user
+DB_PASSWORD=SP123!
