--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "dotenv": "^17.2.1",
     "expo": "~53.0.17",
     "expo-clipboard": "^6.0.3",
+    "expo-constants": "^17.1.7",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "^6.3.1",
     "expo-mail-composer": "^14.1.5",
+    "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
     "express": "^5.1.0",
+    "mssql": "^11.0.1",
     "openai": "^5.12.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
