--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "expo": "~53.0.17",
-    "expo-clipboard": "^6.0.3",
+    "expo": "^53.0.22",
+    "expo-clipboard": "^7.1.5",
     "expo-constants": "^17.1.7",
     "expo-linear-gradient": "^14.1.5",
-    "expo-linking": "^6.3.1",
-    "expo-mail-composer": "^14.1.5",
+    "expo-linking": "^7.1.7",
+    "expo-mail-composer": "^14.1.6",
     "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
     "express": "^5.1.0",
@@ -32,15 +31,21 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.27.1",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/metro-runtime": "^5.0.4",
     "@types/react": "~19.0.10",
+    "metro-minify-terser": "^0.83.1",
+    "metro-react-native-babel-transformer": "^0.77.0",
+    "metro-runtime": "^0.83.1",
     "typescript": "~5.8.3"
   },
   "private": true
